# live-graph

./: .gitignore  pyproject.toml  sample_data.csv
src/live_graph/: __init__.py  generate_data.py  graph_data.py  read_data.py
