[project]
name = "live-graph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "David Mayo", email = "dcmayo@moreheadstate.edu" }
]
requires-python = ">=3.10"
dependencies = [
    "dash>=2.9.3",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
]

[project.scripts]
live-graph = "live_graph:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
